--- a/src/pages/no-internet/no-internet.scss
+++ b/src/pages/no-internet/no-internet.scss
@@ -3,7 +3,10 @@ page-no-internet {
 }
 
 .noWifi {
+    display: block;
     width: 200px;
     height: 200px;
-    object-fit: cover
+    object-fit: cover;
+    margin-left: auto;
+    margin-right:auto;
 }
