--- a/src/pages/event-manager/event-manager.scss
+++ b/src/pages/event-manager/event-manager.scss
@@ -1,3 +1,10 @@
 page-event-manager {
-
+    ion-item {
+        ion-label {
+            vertical-align: baseline;
+            h2 {
+                padding-top: 2.5px;
+            }
+        }
+    }
 }
