--- a/src/pages/messages/messages.scss
+++ b/src/pages/messages/messages.scss
@@ -1,3 +1,10 @@
 page-messages {
-
+    ion-item {
+        ion-label {
+            vertical-align: baseline;
+            h2 {
+                padding-top: 3px;
+            }
+        }
+    }
 }
