--- a/src/pages/tema/tema.scss
+++ b/src/pages/tema/tema.scss
@@ -2,4 +2,12 @@ page-tema {
     p {
      white-space:pre-wrap;
     }
+    ion-item {
+        ion-label {
+            vertical-align: baseline;
+            h2 {
+                padding-top: 3px;
+            }
+        }
+    }
 }
