--- a/src/pages/user-profile/user-profile.scss
+++ b/src/pages/user-profile/user-profile.scss
@@ -2,6 +2,14 @@ page-user-profile {
   #googleMaps {
     height: 400px;
   }
+  ion-item {
+    ion-label {
+        vertical-align: baseline;
+        h2 {
+            padding-top: 3px;
+        }
+    }
+}
 }
 
 .square-container {
