--- a/src/pages/no-internet/no-internet.scss
+++ b/src/pages/no-internet/no-internet.scss
@@ -1,5 +1,12 @@
 page-no-internet {
-
+    ion-item {
+        ion-label {
+            vertical-align: baseline;
+            h2 {
+                padding-top: 3px;
+            }
+        }
+    }
 }
 
 .noWifi {
