--- a/src/pages/message/message.scss
+++ b/src/pages/message/message.scss
@@ -105,3 +105,18 @@ page-message {
       }
     }
   }
+
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+  
+    to {
+      opacity: 1;
+    }
+  }
+
+  .fadeIn {
+    animation-name: fadeIn;
+    animation-duration: 1s;
+  }
