--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -15,3 +15,25 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 
+ion-icon {
+    &[class*="appname-"] {
+        // Instead of using the font-based icons
+        // We're applying SVG masks
+        mask-size: contain;
+        mask-position: 50% 50%;
+        mask-repeat: no-repeat;
+        background: currentColor;
+        width: 1em;
+        height: 1em;
+    }
+    // custom icons
+    &[class*="appname-customicon"] {
+        mask-image: url(../assets/imgs/baseline-local_laundry_service-24px.svg);
+    }
+    &[class*="appname-customicon2"] {
+        mask-image: url(../assets/imgs/t-shirt-svgrepo-com.svg);
+    }
+    &[class*="appname-customicon3"] {
+        mask-image: url(../assets/imgs/baseline-local_laundry_service-24px.svg);
+    }
+}
