--- a/src/pages/search/search.scss
+++ b/src/pages/search/search.scss
@@ -1,10 +1,18 @@
 page-search {
-    ion-item {
+    ion-segment {
+        margin: 5px 0px;
         ion-label {
-            vertical-align: baseline;
-            h2 {
-                padding-top: 2.5px;
-            }
+            margin:  0px !important;
         }
     }
+
+}
+.userItem {
+    ion-label {
+        vertical-align: baseline;
+        h2 {
+            padding-top: 2.5px;
+        }
+    }
+   
 }
