Fixes to New App

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -39,4 +39,10 @@ ion-icon {
     &[class*="appname-customicon3"] {
         mask-image: url(../assets/imgs/Asset_12.svg);
     }
+    &[class*="appname-customicon4"] {
+        mask-image: url(../assets/imgs/Asset_15.svg);
+    }
+    &[class*="appname-customicon5"] {
+        mask-image: url(../assets/imgs/Asset_16.svg);
+    }
 }
